Ajout d'un footer et suppression de la router vers la page contact

--- a/pfirst/src/index.html
+++ b/pfirst/src/index.html
@@ -16,4 +16,29 @@
 
 </body>
 
+<footer class="page-footer font-small teal pt-4">
+
+  <!-- Footer Text -->
+  <div id="text_footer" class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Text -->
+
+  <!-- Copyright -->
+  <div id="copyright" class="footer-copyright text-center py-3">© 2020 Copyright:
+    INeed
+    <div id="text_footer">
+      INeed est un travail s'inscrivant dans le module <i>Projet WEB</i> de la 3è annéee du cursus Télécommunication de l'INSA Lyon.
+    </div>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+
 </html>
